--- a/apps/frontend/src/lib/layout/header/header.component.html
+++ b/apps/frontend/src/lib/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header
     class="fixed top-0 left-0 right-0 z-10 flex items-center justify-between h-14 px-4 border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900">
     <h1 class="text-base font-semibold text-gray-800 dark:text-gray-100">
-        {{ 'MAINTENANCE_SETTINGS.TITLE' | translate }}
+        {{ title | translate }}
     </h1>
     <div class="flex gap-2 items-center">
         <app-language-switcher></app-language-switcher>
