--- a/apps/frontend/src/lib/layout/header/header.component.html
+++ b/apps/frontend/src/lib/layout/header/header.component.html
@@ -1,20 +1,84 @@
 <header
-    class="fixed top-0 left-0 right-0 z-10 flex items-center justify-between h-14 px-4 border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900">
-    <h1 class="text-base font-semibold text-gray-800 dark:text-gray-100">
-        {{ title | translate }}
-    </h1>
-    <div class="flex gap-2 items-center">
-        <app-language-switcher></app-language-switcher>
-        <button (click)="toggleTheme()" aria-label="Toggle theme" class="text-xl">
-            <svg *ngIf="!isDark" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-yellow-400" viewBox="0 0 24 24"
-                fill="currentColor">
-                <path
-                    d="M12 4.5a.75.75 0 01.75.75V7a.75.75 0 01-1.5 0V5.25A.75.75 0 0112 4.5zm0 12a.75.75 0 01.75.75V19a.75.75 0 01-1.5 0v-1.75a.75.75 0 01.75-.75zm7.5-4.5a.75.75 0 010 1.5H19a.75.75 0 010-1.5h.5zM4.5 12a.75.75 0 010 1.5H5a.75.75 0 010-1.5h-.5zM17.03 6.97a.75.75 0 011.06 0l.35.35a.75.75 0 11-1.06 1.06l-.35-.35a.75.75 0 010-1.06zM6.97 17.03a.75.75 0 011.06 0l.35.35a.75.75 0 11-1.06 1.06l-.35-.35a.75.75 0 010-1.06zm0-10.06a.75.75 0 010 1.06l-.35.35a.75.75 0 11-1.06-1.06l.35-.35a.75.75 0 011.06 0zM17.03 17.03a.75.75 0 010 1.06l-.35.35a.75.75 0 11-1.06-1.06l.35-.35a.75.75 0 011.06 0zM12 8a4 4 0 100 8 4 4 0 000-8z" />
-            </svg>
-            <svg *ngIf="isDark" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-300" viewBox="0 0 24 24"
-                fill="currentColor">
-                <path fill-rule="evenodd" d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" clip-rule="evenodd" />
-            </svg>
+  class="fixed top-0 left-0 right-0 z-10 flex items-center justify-between h-14 px-4 border-b border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900"
+>
+  <h1 class="text-base font-semibold text-gray-800 dark:text-gray-100">
+    {{ title | translate }}
+  </h1>
+  <div class="flex gap-2 items-center">
+    <ng-container *ngIf="user$ | async as user">
+      <div
+        class="flex items-center gap-3 relative"
+        *ngIf="sessionService.isLoggedIn()"
+      >
+        <!-- Avatar Circle (Dropdown Trigger) -->
+        <button
+          type="button"
+          class="w-10 h-10 flex items-center justify-center rounded-full bg-gradient-to-br from-blue-500 to-blue-700 shadow text-white font-semibold text-lg border-2 border-white ring-2 ring-blue-200 focus:outline-none"
+          title="{{ user.username }}"
+          (click)="showDropdown = !showDropdown"
+          [attr.aria-expanded]="showDropdown"
+        >
+          {{ getInitials(user) }}
         </button>
-    </div>
+        <!-- Username (optional) -->
+        <span
+          class="hidden sm:inline text-gray-800 dark:text-gray-100 font-medium"
+        >
+          {{ user.username }}
+        </span>
+        <!-- Dropdown Menu -->
+        <div
+          *ngIf="showDropdown"
+          class="absolute right-0 top-full mt-2 w-44 bg-white dark:bg-gray-800 rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 z-50"
+        >
+          <button
+            (click)="logout(); showDropdown = false"
+            class="w-full flex items-center gap-2 px-4 py-2 text-sm text-red-600 hover:bg-red-50 dark:hover:bg-gray-700 rounded-b-lg transition"
+          >
+            <svg
+              class="w-4 h-4"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H7a2 2 0 01-2-2V7a2 2 0 012-2h4a2 2 0 012 2v1"
+              />
+            </svg>
+            <span>{{ 'MAINTENANCE_SETTINGS.LOGOUT.TITLE' | translate }}</span>
+          </button>
+        </div>
+      </div>
+    </ng-container>
+    <app-language-switcher></app-language-switcher>
+    <button (click)="toggleTheme()" aria-label="Toggle theme" class="text-xl">
+      <svg
+        *ngIf="!isDark"
+        xmlns="http://www.w3.org/2000/svg"
+        class="w-5 h-5 text-yellow-400"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+      >
+        <path
+          d="M12 4.5a.75.75 0 01.75.75V7a.75.75 0 01-1.5 0V5.25A.75.75 0 0112 4.5zm0 12a.75.75 0 01.75.75V19a.75.75 0 01-1.5 0v-1.75a.75.75 0 01.75-.75zm7.5-4.5a.75.75 0 010 1.5H19a.75.75 0 010-1.5h.5zM4.5 12a.75.75 0 010 1.5H5a.75.75 0 010-1.5h-.5zM17.03 6.97a.75.75 0 011.06 0l.35.35a.75.75 0 11-1.06 1.06l-.35-.35a.75.75 0 010-1.06zM6.97 17.03a.75.75 0 011.06 0l.35.35a.75.75 0 11-1.06 1.06l-.35-.35a.75.75 0 010-1.06zm0-10.06a.75.75 0 010 1.06l-.35.35a.75.75 0 11-1.06-1.06l.35-.35a.75.75 0 011.06 0zM17.03 17.03a.75.75 0 010 1.06l-.35.35a.75.75 0 11-1.06-1.06l.35-.35a.75.75 0 011.06 0zM12 8a4 4 0 100 8 4 4 0 000-8z"
+        />
+      </svg>
+      <svg
+        *ngIf="isDark"
+        xmlns="http://www.w3.org/2000/svg"
+        class="w-5 h-5 text-gray-300"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </button>
+  </div>
 </header>
